--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,9 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="https://demo.dashboardpack.com/architectui-html-free/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/primeicons@6.0.1/primeicons.css">
-
+  <link href="
+  https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css
+  " rel="stylesheet">
 
 </head>
 <!--
