update  admin vn

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,23 @@
   <script type="text/javascript"
     src="https://demo.dashboardpack.com/architectui-html-free/assets/scripts/main.js"></script>
 
+  <script>
+    const fileImage = document.querySelector('.input-preview__src');
+    const filePreview = document.querySelector('.input-preview');
 
+    fileImage.onchange = function() {
+      const reader = new FileReader();
+
+      reader.onload = function(e) {
+        // get loaded data and render thumbnail.
+        filePreview.style.backgroundImage = "url(" + e.target.result + ")";
+        filePreview.classList.add("has-image");
+      };
+
+      // read the image file as a data URL.
+      reader.readAsDataURL(this.files[0]);
+    };
+  </script>
 </body>
 
 </html>
